fix image stretch on results page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,3 +32,7 @@ i.icon-saved {
     cursor: pointer;
 }
 
+.cover {
+    object-fit: cover;
+}
+
